# Ascend_FlashAttention_TilingAnalyzer

./: CONTRIBUTING.md  README.md  README.zh-CN.md  cli.py  pyproject.toml  tiling_tool.py
assets/brand/: generate_hero_banner.py
docs/: architecture.md  fpa_source_analysis.json  fpa_traceability.md  skill_build_report.md  test_report.md
examples/: fa_tiling_summary.csv
fixtures/prompt_flash_attention/: FIXTURE_SOURCE.md
fixtures/prompt_flash_attention/docs/: aclnnPromptFlashAttention.md  aclnnPromptFlashAttentionV2.md
fixtures/prompt_flash_attention/framework/: CMakeLists.txt  npu_prompt_flash_attention_onnx_plugin.cpp
fixtures/prompt_flash_attention/op_graph/: prompt_flash_attention_proto.h
fixtures/prompt_flash_attention/op_kernel/arch35/: prompt_flash_attention_template_tiling_key_enum.h
src/: flashattention_cli.py  flashattention_models.py  flashattention_utils.py
src/flashattention_analyzers/: __init__.py  cpp_tiling.py  fpa_v2.py  kernel_source.py
src/op_tiling_analyzer/: __main__.py  cli.py  models.py
src/op_tiling_analyzer/analyzers/: __init__.py  cpp_tiling.py  fpa_v2.py
testcases/: fa_testcases.csv
tests/: test_cli.py  test_cpp_tiling.py  test_fixture_sync.py  test_fpa_v2.py  test_kernel_source.py
