[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "source-driven-tiling-tool"
version = "0.1.0"
description = "Build and validate operator tiling replay tools directly from source code and testcase inputs."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "OpenAI Codex" }
]
dependencies = []

[project.scripts]
source-driven-tiling-tool = "op_tiling_analyzer.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
