[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "flashattention-tiling-analyzer"
version = "0.1.0"
description = "Analyze and replay Ascend FlashAttention tiling behavior from real host-side source code."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "OpenAI Codex" }
]
dependencies = []

[project.scripts]
flashattention-tiling-analyzer = "op_tiling_analyzer.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
