[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "flashattention-tiling-analyzer"
version = "0.1.0"
description = "Analyze and replay Ascend FlashAttention tiling behavior from real host and kernel source code."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "OpenAI Codex" }
]
dependencies = []

[project.scripts]
flashattention-tiling-analyzer = "flashattention_cli:main"

[tool.setuptools]
package-dir = { "" = "src" }
py-modules = ["flashattention_cli", "flashattention_models", "flashattention_utils"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["flashattention_analyzers"]
